tests/NormalTests/paczka1/small_fuzzy/49673953.err
Error in line 3: Dzmhhwh S988 27,2
Error in line 12: VFqCk A502 36,3
